Fire ignores force fields when smoke is set to 0.0 #36791

Closed
opened 2013-09-21 16:45:22 +02:00 by Gottfried Hofmann · 3 comments

%%%--- Operating System, Graphics card ---

Ubuntu 13.04 x64

- Blender version with error, and version that worked ---

2.68a Release build - Fail
2.67a Release build - Fail
r60237 buildbot - Fail

- Short description of error ---

Smoke Sim: When using fire for emission and "Smoke" is set to 0.0 in the "Smoke Flames" settings of the domain, the simulation ingnores force fields completely.
When "Smoke" is set to any value >0.0, even very small ones like 0.0001, the fire sim takes force fields into account.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

The attached .blend has a simple fire sim and a very strong turbulence field. When baking the simulation, the turbulence field is ignored (first screenshot).

Setting the value for "Smoke" to s.th. >0.0, like "0.0001" in the second screenshot makes the simulation take the force field into account.

%%%

%%%--- Operating System, Graphics card --- Ubuntu 13.04 x64 - Blender version with error, and version that worked --- 2.68a Release build - Fail 2.67a Release build - Fail r60237 buildbot - Fail - Short description of error --- Smoke Sim: When using fire for emission and "Smoke" is set to 0.0 in the "Smoke Flames" settings of the domain, the simulation ingnores force fields completely. When "Smoke" is set to any value >0.0, even very small ones like 0.0001, the fire sim takes force fields into account. - Steps for others to reproduce the error (preferably based on attached .blend file) --- The attached .blend has a simple fire sim and a very strong turbulence field. When baking the simulation, the turbulence field is ignored (first screenshot). Setting the value for "Smoke" to s.th. >0.0, like "0.0001" in the second screenshot makes the simulation take the force field into account. %%%

Changed status to: 'Open'

Changed status to: 'Open'

%%%Fixed in r60316. Thanks for the report. :)%%%

%%%Fixed in r60316. Thanks for the report. :)%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36791
No description provided.