Fix [#36791]: Fire ignores force fields when smoke is set to 0.0